update Websocket endpoint to leave room for future extensions
